This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Jan-2004 (Lars Duening)  (3.3.649)
  - (configure) Added another path to the search for a mySQL installation.

08-Jan-2004 (Lars Duening)  (3.3.648)
  - (settings/timewarp) New settings file.
  - (mudlib/sys/files.h, files.c) Efun get_dir() can now return
        access times and file modes (suggested by Mats).

08-Jan-2004 (Lars Duening)  (3.3.647)
  - (configure, pkg-mysql.c) Adjusted the search for the mySQL include
        files to allow for local installations (Bug #0000338)

08-Jan-2004 (Lars Duening)  (3.3.646)
  - (func_spec, lex, prolang.y, interpret.c) New pragma 'range_check'
        allows to check the validity of array ranges at runtime - these
        are the range checks currently controlled by the warn_deprecated
        pragma.

08-Jan-2004 (Lars Duening)  (3.3.645)
  - (smalloc.c) Corrected some bugs in the extended statistics.
  - (comm, simulate.c, mudlib/sys/debug_info.h) Added statistics for
        the incoming network traffic, and also display the total
        amount of data sent/received in the 'status tables' command.

04-Jan-2004 (Lars Duening)  (3.3.644)
  - (main.c, doc/driver/invocation, INSTALL) Corrected the documentation
        (Bugs #0000333 and #0000335).

31-Dec-2004 (Lars Duening)  (3.3.643)
  - (mapping.c) Corrected the hashing function so that for efun/sefun/operator
        closures the object information is no longer part of the hash. Without
        that, mappings treat closure keys differently than the '=='/'!='
        operators, which is not a good thing.

31-Dec-2004 (Lars Duening)  (3.3.642)
  - (lex.c) Factored the handling of preprocessor statements and of
        closures out of the yylex switch.

29-Dec-2004 (Lars Duening)  (3.3.641)
  - (closure, object.c) The driver internally now uses the closure creation