@@ -14,6 +14,10 @@ DESCRIPTION
         until the next send_udp() - the latter one might return '0' even
         if itself was successful.
 
+BUG
+        If the <host> is given as a fully qualified name (instead of
+        an IP address), the execution will block until the name is resolved.
+
 HISTORY
         LDMud 3.2.9 renamed this efun from send_imp(), and also changed the
           privilege violation string and the apply names.
