@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+09-Jan-2004 (Lars Duening)  (3.3.650)
+  - (doc/efun/send_udp) Added a note about the blocking behaviour of 
+       name lookups.
+  - (configure) The mySQL test was not quite correct.
+
 09-Jan-2004 (Lars Duening)  (3.3.649)
   - (configure) Added another path to the search for a mySQL installation.
 
